#65 Fix distance moved marker going off screen (!21)
Fix distance moved marker going off screen

Reviewed-on: https://git.christhebaron.co.uk/ChrisTheBaron/TabletopExplorer/pulls/21

--- a/main.css
+++ b/main.css
@@ -143,7 +143,7 @@ nav {
 #distanceMoved {
     color: white;
     font-size: 30px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 5px;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
